--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="col-xl-12">
                 <br>           
               <h2><b>How to Prevent Fires in Your Home</b></h2>
-              <img src="https://cdn.discordapp.com/attachments/1063423416654368808/1085914861399179345/image_1-gxrvPEzyS-transformed.png">
+              <img src="https://www.vecteezy.com/vector-art/11143568-fireman-putting-out-fire">
               <hr>
                  <p class="txt-danger"> A blaze can happen anywhere, anytime, to anyone; that is why you must always be prepared to handle it if it were ever to occur to you in the security of your residence. Yes, items such as fire extinguishers, smoke alarms, escape plans, and fireproof containers for your valuables are essential. However, a fire could be preventable by observing a few steps to keep you and your family safe before it happens. </p>
                  <hr>
